--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test:basic": "vitest basic",
     "test:advanced": "vitest advanced",
     "test:ui": "vitest --ui",
-    "prepare": "husky"
+    "prepare": "husky",
+    "build:prod": "vite build --mode production",
+    "deploy": "pnpm run build:prod && gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -41,6 +43,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "gh-pages": "^6.3.0",
     "globals": "^15.9.0",
     "husky": "^9.1.7",
     "jsdom": "^25.0.1",
